# beskar

./: .coverage  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: improvements.md  index.md  review_3.21.2026.md  roadmap.md  savings.md
openspec/: config.yaml
openspec/changes/archive/2026-02-20-cache-module/: design.md
openspec/changes/archive/2026-02-20-python-setup/: design.md  tasks.md
openspec/changes/cache-module/: proposal.md  tasks.md
openspec/changes/client-wrapper/: design.md  proposal.md  tasks.md
openspec/changes/compressor-module/: proposal.md  tasks.md
openspec/changes/custom-token-estimator/: design.md  proposal.md  tasks.md
openspec/changes/debug-logging-mode/: design.md  proposal.md  tasks.md
openspec/changes/metrics-module/: proposal.md  tasks.md
openspec/changes/model-routing/: design.md  proposal.md  tasks.md
openspec/changes/project-setup/: tasks.md
openspec/changes/pruner-module/: proposal.md  tasks.md
openspec/changes/python-setup/: proposal.md  tasks.md
openspec/changes/real-summarization/: design.md  proposal.md  tasks.md
openspec/changes/streaming-support/: design.md  proposal.md  tasks.md
openspec/specs/beskar-client/: spec.md
openspec/specs/cache-structurer/: spec.md
python/: pyproject.toml
python/src/beskar/: __init__.py  cache.py  client.py  compressor.py  metrics.py  pruner.py  types.py
python/tests/: test_compressor.py  test_smoke.py
src/: client.test.ts  client.ts  index.ts  types.ts
src/beskar/: __init__.py  cache.py  client.py  compressor.py  metrics.py  pruner.py  types.py
src/compressor/: index.test.ts
src/metrics/: index.ts
tests/: test_cache.py  test_client.py  test_metrics.py  test_pruner.py
typescript/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: client.test.ts  client.ts  index.ts  types.test.ts  types.ts
typescript/src/cache/: index.test.ts  index.ts
typescript/src/compressor/: index.ts
typescript/src/metrics/: index.test.ts  index.ts
typescript/src/pruner/: index.test.ts  index.ts
(+19 files in other folders)
