[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beskar"
version = "0.1.0"
description = "Claude-native token optimization for agentic pipelines"
requires-python = ">=3.9"
dependencies = ["anthropic"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
