[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "beskar"
dynamic = ["version"]
description = "Claude-native token optimization for agentic pipelines"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vlad Ligai" }]
readme = "README.md"
dependencies = ["anthropic"]

[project.urls]
Homepage = "https://github.com/Vligai/beskar"
Repository = "https://github.com/Vligai/beskar.git"
Issues = "https://github.com/Vligai/beskar/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
